# omnimemory

./: .env.example  .flake8  .gitignore  .markdown-link-check.json  .migration_freeze  .pre-commit-config.yaml  .secrets.baseline  .yamlfmt  ADVANCED_ARCHITECTURE_IMPROVEMENTS.md  AGENT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_VALIDATION_SUMMARY.md  LICENSE  MISSING_OMNIBASE_CORE_COMPONENTS.md  README.md  SECURITY.md  contract.yaml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  validate_architecture_improvements.py  validate_foundation.py  validate_foundation_isolated.py  validate_foundation_minimal.py
.claude/: architecture-handshake.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  required-checks.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-merge.yml  auto-tag-on-merge.yml  build-and-push-migrate-image.yml  check-handshake.yml  ci.yml  codeql.yml  contract-validation.yml  cr-thread-gate.yml  omni-standards-compliance.yml  pre-commit.yml  release-dry-run.yml  release.yml  security-scan.yml  test.yml
.serena/: project.yml
.serena/memories/: project_overview.md  suggested_commands.md
deployment/database/migrations/: 001_create_subscription_tables.sql  002_create_memories_table.sql  003_create_crawl_state_table.sql  004_create_navigation_sessions_table.sql  005_backfill_null_checksums.sql
deployment/database/migrations_pending/: 004_create_navigation_paths_collection.py
deployment/docker/: Dockerfile.migrate
docs/: INDEX.md  PERFORMANCE_TESTING.md  environment_variables.md  handler_reuse_matrix.md  pii_handling.md  stub_protocols.md
docs/architecture/: ARCH_002_KAFKA_ABSTRACTION.md  ONEX_FOUR_NODE_ARCHITECTURE.md
docs/ci/: CI_MONITORING_GUIDE.md
docs/db-split/: fk-audit-omn-2069.md
docs/runtime/: RUNTIME_PLUGINS.md
examples/: __init__.py  advanced_architecture_demo.py
scripts/: check_migration_freeze.sh  check_no_hardcoded_bolt.sh  graphify_to_memgraph.py  graphify_to_qdrant.py  validate_ci_precommit_alignment.py  validate_no_transport_imports.py
scripts/validation/: check_ai_slop.py  check_kafka_no_hardcoded_fallback.sh  validate_enum_casing.py  validate_http_imports.py  validate_kafka_imports.py  validate_model_locations.py  validate_naming.py  validate_no_backward_compatibility.py  validate_pydantic_patterns.py  validate_secrets.py  validate_single_class_per_file.py  validate_spdx_headers.py
src/omnimemory/: __init__.py  _compat_imports.py  bootstrap.py  secrets.py  settings.py  topics.py
src/omnimemory/audit/: __init__.py  __main__.py  io_audit.py
src/omnimemory/compat/: __init__.py  model_onex_container.py  node_result.py  onex_error.py
src/omnimemory/enums/: __init__.py  enum_attribution_signal_type.py  enum_context_item_type.py  enum_data_type.py  enum_entity_extraction_mode.py  enum_error_code.py  enum_intelligence_operation_type.py  enum_lifecycle_state.py  enum_memory_operation_type.py  enum_memory_storage_type.py  enum_memory_type.py  enum_migration_status.py  enum_node_type.py  enum_operation_status.py  enum_preferred_tone.py  enum_priority_level.py  enum_promotion_tier.py  enum_semantic_entity_type.py  enum_severity.py  enum_subscription_status.py  enum_technical_level.py  enum_trust_level.py
src/omnimemory/errors/: __init__.py  embedding_errors.py
src/omnimemory/handlers/: __init__.py  handler_intent.py  handler_semantic_compute.py  handler_subscription.py  handler_subscription_contract.yaml
src/omnimemory/models/: __init__.py
src/omnimemory/nodes/: __init__.py  base.py
src/omnimemory/protocols/: __init__.py  base_protocols.py  data_models.py  error_models.py  protocol_crawl_state_repository.py  protocol_embedding.py  protocol_embedding_provider.py  protocol_handler_intent.py  protocol_intent_graph_adapter.py  protocol_secrets_provider.py  secrets_provider.py
src/omnimemory/runtime/: __init__.py  adapters.py  contract_topics.py  dispatch_handlers.py  handler_lifecycle.py  handler_lifecycle_contract.yaml  introspection.py  message_type_registration.py  plugin.py  wiring.py
src/omnimemory/tools/: __init__.py  contract_linter.py
src/omnimemory/utils/: __init__.py  audit_logger.py  concurrency.py  db_url.py  error_sanitizer.py  handler_constants.py  health_manager.py  observability.py  pii_detector.py  resource_manager.py  retry_utils.py
tests/: __init__.py  conftest.py  test_bootstrap.py  test_concurrency.py  test_config_models.py  test_contract_validation.py  test_contract_version.py  test_db_url.py  test_foundation.py  test_health_manager.py  test_migration_progress.py  test_node_enforcement.py  test_node_imports.py  test_observability_metrics.py  test_performance.py  test_resource_manager.py  test_secrets_provider.py  test_semantic_compute_policy_config.py  test_settings.py  test_validation_scripts.py
tests/audit/: io_audit_whitelist.yaml  transport_import_whitelist.yaml
tests/handlers/: __init__.py  test_handler_intent.py  test_handler_semantic_compute.py
tests/handlers/adapters/: __init__.py  (+6 more)
tests/integration/: __init__.py  conftest.py  test_entry_point_discovery.py  test_golden_chain_memgraph_ingestion.py  test_golden_chain_qdrant_ingestion.py  test_handler_lifecycle_pattern.py  test_handler_subscription.py  test_node_agent_coordinator.py  test_persona_round_trip.py
tests/models/: __init__.py  test_frozen_boundary_models.py
tests/nodes/: __init__.py
tests/unit/: __init__.py  test_contract_linter.py  test_dispatch_retrieval_config.py  test_entry_points.py  test_graphify_to_memgraph.py  test_graphify_to_qdrant.py  test_handler_subscription_notify_strict.py  test_ingestion_models.py  test_io_audit.py  test_model_user_persona_v1.py  test_persona_enums.py  test_scope_mapping_config.py  test_sql_placeholders.py  test_validate_ci_precommit_alignment.py  test_validate_kafka_imports.py  test_validate_no_transport_imports.py
tmp/pr-review-cache/: pr_6_OmniNode-ai-omnimemory_full.json  pr_8_OmniNode-ai-omnimemory_full.json  pr_9_OmniNode-ai-omnimemory_full.json
(+440 files in other folders)
