# SPDX-FileCopyrightText: 2025 OmniNode.ai Inc.
# SPDX-License-Identifier: MIT

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnimemory"
version = "0.4.0"
description = "OmniNode document ingestion and semantic retrieval"
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = { text = "MIT" }
authors = [{ name = "OmniNode.ai", email = "contact@omninode.ai" }]
keywords = ["omninode", "memory", "rag", "embeddings", "semantic-search", "onex"]
dependencies = [
    # Core MCP integration for Archon connectivity
    "mcp>=1.8.0,<2.0.0",

    # HTTP client for MCP calls and API communication
    "httpx>=0.28.0,<1.0.0",

    # Data validation and serialization
    "pydantic>=2.10.0,<3.0.0",

    # FastAPI web framework for production API
    "fastapi>=0.120.1,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",

    # Memory and storage components
    # Database support for memory storage - using Supabase client
    "supabase>=2.9.0,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",

    # SQLAlchemy for memory database
    "sqlalchemy>=2.0.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",

    # Redis support for caching and ephemeral memory
    "redis>=6.4.0,<7.0.0",

    # Vector database support
    # Pinecone for vector memory storage
    "pinecone-client>=4.1.0,<5.0.0",
    # qdrant-client is a transitive dep; ceiling at <1.17.0 because 1.17.0 applies
    # PEP 604 union syntax to protobuf EnumTypeWrapper objects, causing TypeError at
    # import time under Python 3.12. Remove ceiling once fixed upstream.
    "qdrant-client>=1.7.0,<1.17.0",

    # Environment variable management
    "python-dotenv>=1.0.1,<2.0.0",

    # Async support
    "asyncio-mqtt>=0.16.0,<1.0.0",

    # JSON and YAML processing
    "pyyaml>=6.0.2,<7.0.0",

    # ONEX dependencies - versioned releases from PyPI
    "omnibase-core>=0.19.0,<0.20.0",
    "omnibase-spi>=0.12.0,<0.13.0",
    "omnibase-infra>=0.10.0,<0.11.0",

    # Logging and monitoring
    # Version ^23.3.0 required for compatibility with omnibase-infra (requires ^23.2.0)
    "structlog>=23.3.0,<24.0.0",

    # Runtime configuration and utilities
    "pydantic-settings>=2.10.1,<3.0.0",
    "psutil>=7.0.0,<8.0.0",
    "aiohttp>=3.12.15,<4.0.0",
    "cachetools>=6.2.4,<7.0.0",
]

[project.urls]
Homepage = "https://github.com/OmniNode-ai/omnimemory"
Repository = "https://github.com/OmniNode-ai/omnimemory"
Documentation = "https://github.com/OmniNode-ai/omnimemory/tree/main/docs"
Issues = "https://github.com/OmniNode-ai/omnimemory/issues"
Changelog = "https://github.com/OmniNode-ai/omnimemory/blob/main/CHANGELOG.md"

[project.entry-points."onex.domain_plugins"]
memory = "omnimemory.runtime.plugin:PluginMemory"

[tool.hatch.build.targets.wheel]
packages = ["src/omnimemory"]

[dependency-groups]
dev = [
    # Testing framework
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.25.0,<1.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-timeout>=2.3.1,<3.0.0",
    "pytest-split>=0.10.0,<1.0.0",
    "pytest-xdist>=3.5.0,<4.0.0",

    # Code formatting and linting (ruff replaces black, isort, flake8 - 10-100x faster)
    # VERSION SYNC: Poetry uses ^0.8.0 (allows updates), pre-commit pins v0.8.6
    # UP007 (PEP 604 union syntax) is ENABLED and organizationally mandated
    "ruff>=0.8.0,<1.0.0",

    # Type checking (dual checker: mypy strict + pyright basic)
    # VERSION SYNC: Poetry uses caret versions, pre-commit pins exact versions
    # mypy: ^1.14.0 in Poetry, v1.14.1 in pre-commit
    # pyright: ^1.1.390 in Poetry, v1.1.391 in pre-commit
    "mypy>=1.14.0,<2.0.0",
    "pyright>=1.1.390",
    "types-cachetools>=6.2.0",

    # Pre-commit hooks
    "pre-commit>=4.0.1,<5.0.0",

    # Security
    "detect-secrets>=1.5.0,<2.0.0",

    # Development utilities
    "memory-profiler>=0.61.0",
    "docker>=7.1.0,<8.0.0",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [
    "**/archived/**",
    "**/archive/**",
    "**/site-packages/**",
]

[tool.ruff.format]
# Use black-compatible formatting (ruff format is a drop-in replacement for black)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
# Rule sets enabled (includes UP for pyupgrade rules)
# NOTE: UP007 (PEP 604 union syntax: X | Y instead of Union[X, Y]) is ENABLED
# and organizationally mandated - do NOT add UP007 to the ignore list
# NOTE: TCH rules have been remapped to TC in ruff 0.8+
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TC", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
# IMPORTANT: UP007 must NEVER be added here (PEP 604 syntax is mandated)
ignore = [
    # ==========================================================================
    # DESIGN CHOICES (intentionally ignored - not technical debt)
    # ==========================================================================
    "S101",      # Allow assert statements in tests
    "PLR0206",   # Properties with parameters (design choice for descriptors)
    "UP017",     # Use datetime.UTC (prefer timezone.utc for codebase consistency - 100+ existing usages)
    "A002",      # Function argument shadowing builtin (id, type, etc. are common)
    "B024",      # Abstract class without abstract methods (base class patterns)
    "ARG005",    # Unused lambda argument (callback signatures require it)
    "S110",      # try-except-pass (intentional in cleanup/shutdown code)
    "ISC001",    # Implicit string concatenation (conflicts with ruff formatter)

    # ==========================================================================
    # COMPLEXITY RULES (architectural - requires refactoring)
    # ==========================================================================
    "C901",      # Function complexity (>10) - requires architectural changes
    "PLR0911",   # Too many return statements (>6)
    "PLR0912",   # Too many branches (>12)
    "PLR0913",   # Too many arguments (>5)
    "PLR0915",   # Too many statements (>50)

    # ==========================================================================
    # EXCEPTION HANDLING (technical debt - fix incrementally)
    # ==========================================================================
    "BLE001",    # Blind exception catching (Exception)
    "EM101",     # Exception must not use string literal
    "EM102",     # Exception must not use f-string literal
    "TRY003",    # Long exception messages outside exception class
    "TRY004",    # Prefer TypeError for invalid type
    "TRY203",    # Redundant exception handler (useless re-raise)
    "TRY300",    # Consider moving to else block
    "TRY301",    # Abstract raise to inner function
    "TRY400",    # Use logging.exception instead of logging.error
    "B904",      # raise ... from err/None in except blocks

    # ==========================================================================
    # BOOLEAN PARAMETERS (technical debt - fix incrementally)
    # ==========================================================================
    "FBT001",    # Boolean positional argument in function definition
    "FBT002",    # Boolean default positional argument
    "FBT003",    # Boolean positional value in function call

    # ==========================================================================
    # UNUSED ARGUMENTS (technical debt - interface compliance)
    # ==========================================================================
    "ARG001",    # Unused function argument (callback signatures)
    "ARG002",    # Unused method argument (interface compliance)

    # ==========================================================================
    # SIMPLIFICATION RULES (technical debt - fix incrementally)
    # ==========================================================================
    "SIM102",    # Nested if statements (use single if with and)
    "SIM105",    # Use contextlib.suppress instead of try-except-pass
    "SIM110",    # Use any() instead of for loop
    "SIM117",    # Nested with statements (use single with)
    "SIM118",    # Use key in dict instead of key in dict.keys()
    "SIM101",    # Multiple isinstance calls (merge into single call)
    "RET504",    # Unnecessary assignment before return
    "RET505",    # Unnecessary elif after return

    # ==========================================================================
    # CODE STYLE (technical debt - fix incrementally)
    # ==========================================================================
    "PLR2004",   # Magic values in comparisons (acceptable in tests and config)
    "E501",      # Line too long (>88 characters)
    "E402",      # Module level import not at top of file
    "TC003",     # Move stdlib import into TYPE_CHECKING block
    "COM812",    # Trailing comma missing
    "N806",      # Variable in function should be lowercase
    "PTH123",    # Use Path.open() instead of open()
    "TID252",    # Prefer absolute imports over relative from parent
    "T201",      # print() found (use logging instead)
    "S311",      # Random not suitable for crypto (acceptable for non-crypto)
    "RUF022",    # __all__ is not sorted
    "RUF012",    # Mutable class attrs should be ClassVar
    "RUF005",    # Consider unpacking instead of concatenation
    "G004",      # Logging statement uses f-string
    "B007",      # Unused loop control variable

    # ==========================================================================
    # PRE-EXISTING TECHNICAL DEBT (suppress to unblock OSS launch)
    # ==========================================================================
    "PLC0415",   # Import not at top of file (300+ existing usages in test mocks/fixtures)
    "UP042",     # Use StrEnum instead of (str, Enum) (requires refactor of 37 enums)
    "RUF043",    # Unnecessary default= in dataclass field (pre-existing pattern)
    "PLW0108",   # Lambda returning constant (pre-existing in adapter/factory code)
    "RUF059",    # Unused unpacked variable (pre-existing in destructuring patterns)
    "UP047",     # Use PEP 695 generics (requires Python 3.12 syntax changes)
    "TC002",     # Move third-party import into TYPE_CHECKING block
    "S608",      # Possible SQL injection (pre-existing in test fixtures with controlled input)
]

[tool.ruff.lint.isort]
known-first-party = ["omnimemory"]

[tool.ruff.lint.per-file-ignores]
# Validation scripts need special rules for security, naming, and documentation
"scripts/validation/*" = [
    "S602",  # subprocess call with shell=True
    "S603",  # subprocess without shell
    "S604",  # function call with shell=True
    "S605",  # start process with shell
    "S606",  # start process without shell
    "S607",  # start process with partial path
    "N802",  # AST visitor methods must use CamelCase names (visit_Import, visit_ClassDef)
    "ERA001",  # Commented-out code (validation scripts document code patterns in comments)
]
# Transport import guard uses AST visitor methods (visit_Import, visit_ImportFrom, visit_If)
"scripts/validate_no_transport_imports.py" = [
    "N802",  # AST visitor methods use CamelCase (visit_Import, visit_If)
]
# CI alignment script uses simple file parsing
"scripts/validate_ci_precommit_alignment.py" = [
    "ERA001",  # Commented-out code in examples
]
# Tools and audit modules use AST visitors for analysis
"src/omnimemory/tools/*" = [
    "N802",  # AST visitor methods use CamelCase
    "ERA001",  # Documented code patterns in comments
]
"src/omnimemory/audit/*" = [
    "N802",  # AST visitor methods use CamelCase (visit_Import, visit_Call, etc.)
]
# Test-only rules - acceptable in test files
"tests/**/*" = [
    "SLF001",  # Private member accessed (tests need to verify internals)
    "S105",    # Hardcoded password (test fixtures use fake credentials)
    "S608",    # SQL injection (test code with controlled input)
    "B017",    # pytest.raises(Exception) (acceptable for broad exception tests)
    "PT011",   # pytest.raises too broad (will add match= incrementally)
    "ERA001",  # Commented-out code (section headers for test organization)
    "S603",    # subprocess call (test code with controlled input)
    "S607",    # Partial executable path (test code uses 'python')
]

[tool.mypy]
# Strict mode enables: warn_return_any, warn_unused_configs, disallow_untyped_defs,
# disallow_incomplete_defs, check_untyped_defs, disallow_untyped_decorators,
# no_implicit_optional, warn_redundant_casts, warn_unused_ignores, strict_equality, and more
strict = true
plugins = ["pydantic.mypy"]
python_version = "3.12"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

# Third-party libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "redis.*",
    "pinecone.*",
    "supabase.*",
    "asyncpg.*",
    "structlog.*",
    "pydantic_settings.*",
    "omnibase_core",
    "omnibase_core.*",
    "omnibase_infra",
    "omnibase_infra.*",
    "pkg_resources",
]
ignore_missing_imports = true

# Redis module has incomplete type stubs - allow untyped calls
[[tool.mypy.overrides]]
module = ["redis.*"]
disallow_untyped_calls = false

# Settings module uses pydantic_settings which is ignored - allow subclassing Any
[[tool.mypy.overrides]]
module = ["omnimemory.settings"]
disallow_subclassing_any = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = false
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
# Filter deprecation warnings from third-party libraries we can't fix
filterwarnings = [
    # Google protobuf PyType_Spec metaclass warning - upstream issue, can't fix
    "ignore:Type google._upb._message.*:DeprecationWarning",
]
markers = [
    "integration: marks tests as integration tests (may require external services)",
    "unit: marks tests as unit tests (no external dependencies)",
    "benchmark: marks tests as performance benchmarks",
    "slow: marks tests as slow-running (excluded from quick test runs)",
    "memgraph: marks tests as requiring Memgraph database",
    "embedding: marks tests as requiring embedding server (http://192.168.86.201:8002)",
]
